@@ -1,5 +1,7 @@
 package io.scalac.mesmer.otelextension.zio;
 
+import static io.scalac.mesmer.utils.Combine.combine;
+
 import com.google.auto.service.AutoService;
 import io.opentelemetry.javaagent.extension.instrumentation.InstrumentationModule;
 import io.opentelemetry.javaagent.extension.instrumentation.TypeInstrumentation;
@@ -20,16 +22,22 @@ public class MesmerZIOMetricAPIInstrumentationModule extends InstrumentationModu
 
   @Override
   public List<TypeInstrumentation> typeInstrumentations() {
-    return List.of(ZIOInstrumentations.fromMetricKeyAdvice(), ZIOInstrumentations.taggedAdvice());
+    return Collections.singletonList(ZIOInstrumentations.concurrentMetricRegistryAdvice());
   }
 
   @Override
   public List<String> getAdditionalHelperClassNames() {
-    return List.of(
-        "io.scalac.mesmer.otelextension.instrumentations.zio.advice.ZIOFromMetricKeyAdvice$",
-        "io.scalac.mesmer.otelextension.instrumentations.zio.advice.ZIOMetricsTaggedAdvice$",
-        "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOInstrumentations$",
-        "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOMetrics$");
+    return combine(
+        ZIOHelpers.scalaReflectHelpers(),
+        List.of(
+            "io.scalac.mesmer.otelextension.instrumentations.zio.advice.ConcurrentMetricRegistryAdvice$",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOInstrumentations$",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ZIOMetrics$",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ConcurrentMetricRegistryPoller",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ConcurrentMetricRegistryPoller$$anon$1",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ConcurrentMetricRegistryClient$",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ConcurrentMetricRegistryClient$MetricHook",
+            "io.scalac.mesmer.otelextension.instrumentations.zio.ConcurrentMetricRegistryPoller$$anon$1$$anon$2"));
   }
 
   @Override
@@ -38,12 +46,7 @@ public class MesmerZIOMetricAPIInstrumentationModule extends InstrumentationModu
   }
 
   @Override
-  public void registerMuzzleVirtualFields(VirtualFieldMappingsBuilder builder) {
-    builder.register("zio.metrics.Metric", "java.lang.String");
-    builder.register(
-        "zio.metrics.Metric",
-        "io.opentelemetry.javaagent.shaded.io.opentelemetry.api.common.Attributes");
-  }
+  public void registerMuzzleVirtualFields(VirtualFieldMappingsBuilder builder) {}
 
   @Override
   public List<String> getMuzzleHelperClassNames() {
